	* In chats right-click on names in the conversation window to
	  IM/Send File/Get info/ignore the user
	* Added tab management options to the tab right-click menu (Sadrul Habib
	  Chowdhury)
	* Brand new message queueing system (Casey Harkins)

	Sounds:
	* Beautiful new default sounds (Brad Turcotte)
	* Use libao for playing sounds via NAS instead of accessing NAS directly

	Log Viewer:
	* Log viewer aggregates logs from the same "Person" (Richard Laager)
	* When opening the log viewer, show the most recent log by default
	  (Peter McCurdy)

	Plugins:
	* Plugins are now accessed through a separate dialog from the Tools
	  menu of the Buddy List
	* Newly installed plugins can now be activated without restarting
	  Gaim (Sadrul Habib Chowdhury)
	* Overhauled the system tray/docklet plugin (Casey Harkins)
	* Text Replacement Plugin rewritten, works in real time and far more
	  intuitively (Benjamin Kahn with help from Richard Laager)
	* Entries in the text replacement plugin are now sorted
	  alphabetically (Richard Laager)
	* I'dle Ma'ker plugin now has easier an method to unidle accounts, a way
	  to idle all accounts at once, and a way to unidle all accounts idled by
	  the plugin (John Bailey, Sadrul Habib Chowdhury)
	* The Evolution Integration plugin now supports Groupwise contacts
	* Mono plugin loader (Eoin Coffey)
	* Perl plugin loader has been rewritten (John Kelm, Google Summer
	  of Code)
	* New music messaging plugin (Christian Muise, Google Summer of Code)
	* gaim-remote has been superceded by new DBUS bindings within Gaim
	  (Piotr Zielinski, Google Summer of Code)
	* The functionality of the auto-reconnect plugin has been
	  moved into the Gaim core, and the plugin itself has been
	  removed.

	MSN Features:
	* Custom smiley receiving support (Irving Cordova & Francesco Fracassi)
	* Added support for sending (with the /nudge command) and receiving
	  "nudges" (Julien Cegarra, Martin Bayard)